test/corpus/realworld/idris2-docs.txt
============================================
idris2-docs
============================================
package parser-docs
version   = 0.1.0
authors   = "stefan-hoeck"
sourcedir = "src"
depends   = elab-util
          , parser
          , profiler

modules = Intro
        , Parser
        , Combinators

------

(source_file
  (package_declaration
    (package_name))
  (version_declaration
    (version_number))
  (field_declaration
    (field_name)
    (string_value))
  (field_declaration
    (field_name)
    (string_value))
  (dependency_declaration
    (dependency_list
      (dependency_item
        (package_name))
      (dependency_item
        (package_name))
      (dependency_item
        (package_name))))
  (module_declaration
    (module_list
      (module_name)
      (module_name)
      (module_name))))
