test/corpus/realworld/idris2-general-test.txt
============================================
idris2-general-test
============================================
package parser-test
version = 0.1.0
authors = "stefan-hoeck"

depends = parser
        , idris2
        , hedgehog

modules = Test.Lex.Util

main = Main
executable = "parser-test"
sourcedir = "src"

------

(source_file
  (package_declaration
    (package_name))
  (version_declaration
    (version_number))
  (field_declaration
    (field_name)
    (string_value))
  (dependency_declaration
    (dependency_list
      (dependency_item
        (package_name))
      (dependency_item
        (package_name))
      (dependency_item
        (package_name))))
  (module_declaration
    (module_list
      (module_name)))
  (main_declaration
    (module_name))
  (executable_declaration
    (string_value))
  (field_declaration
    (field_name)
    (string_value)))
