test/corpus/realworld/idris2-json-parser.txt
============================================
idris2-json-parser
============================================
package parser-json
version   = 0.1.0
authors   = "stefan-hoeck"
sourcedir = "src"
depends   = parser

brief     = "Total and efficient parser and lexer for the JSON file format"

modules   = JSON.Parser

------

(source_file
  (package_declaration
    (package_name))
  (version_declaration
    (version_number))
  (field_declaration
    (field_name)
    (string_value))
  (field_declaration
    (field_name)
    (string_value))
  (dependency_declaration
    (dependency_list
      (dependency_item
        (package_name))))
  (field_declaration
    (field_name)
    (string_value))
  (module_declaration
    (module_list
      (module_name))))
