test/corpus/realworld/idris2-show-parser.txt
============================================
idris2-show-parser
============================================
package parser-show
version   = 0.1.0
authors   = "stefan-hoeck"
sourcedir = "src"
depends   = parser
          , prettier

brief     = "Parsing and pretty-printing regular Show output"

modules = Text.Show.Value

------

(source_file
  (package_declaration
    (package_name))
  (version_declaration
    (version_number))
  (field_declaration
    (field_name)
    (string_value))
  (field_declaration
    (field_name)
    (string_value))
  (dependency_declaration
    (dependency_list
      (dependency_item
        (package_name))
      (dependency_item
        (package_name))))
  (field_declaration
    (field_name)
    (string_value))
  (module_declaration
    (module_list
      (module_name))))
