test/corpus/realworld/idris2-tsv-parser.txt
============================================
idris2-tsv-parser
============================================
package parser-tsv
version   = 0.1.0
authors   = "stefan-hoeck"
sourcedir = "src"
depends   = parser
          , elab-util

brief     = "Efficient parser and marshallers for tab-separated values"

modules   = Text.TSV
          , Text.TSV.Decoder
          , Text.TSV.Encoder

          , Derive.TSV
          , Derive.TSV.Decoder
          , Derive.TSV.Encoder

------

(source_file
  (package_declaration
    (package_name))
  (version_declaration
    (version_number))
  (field_declaration
    (field_name)
    (string_value))
  (field_declaration
    (field_name)
    (string_value))
  (dependency_declaration
    (dependency_list
      (dependency_item
        (package_name))
      (dependency_item
        (package_name))))
  (field_declaration
    (field_name)
    (string_value))
  (module_declaration
    (module_list
      (module_name)
      (module_name)
      (module_name)
      (module_name)
      (module_name)
      (module_name))))
